# reach-plugin-hogwarts

./: .gitignore  README.md  SOURCES.md  pyproject.toml  reach-plugin.json  ui.py
agent/: agent.py
agent/examples/: input_provider_echo.py
agent/windows/: README-elevated.md  install-elevated-task.ps1  start-agent-silent.ps1
agent/windows/privilege-engine/: Cope.Core.ps1  Cope.Modules.ps1  Invoke-Cope.ps1  README.md
hogwarts/: __init__.py  banner.py  h264dec.py  keepstream.py  page.py  theme.py
hogwarts/backend/: CONTRACT.md  client.py
hogwarts/panels/: agents.py  channel.py  console.py  desktop_viewer.py  file_explorer.py  listener.py  ops.py  plane.py
lab/: Dockerfile.agent  Dockerfile.plane  docker-compose.yml  entrypoint-agent.sh  personal_setup.sh  run_lab.sh
plane/: server.py
scripts/: smoke_keepstream_socks.py
