[project]
name = "hogwarts"
version = "0.5.95"
description = "Reach plugin for command-and-control (Hogwarts)"
requires-python = ">=3.10"
dependencies = [
  "keepstream @ git+ssh://git@gitea.anguish.sh:anguish/keepstream.git@main",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["hogwarts*"]
